tests/ui/from-tryfrom-bits-is-invalid.stderr
error: enum doesn't fill its bitsize

         = help: you need to use `#[derive(TryFromBits)]` instead, or specify one of the variants as #[fallback]

 --> tests/ui/from-tryfrom-bits-is-invalid.rs:4:10
  |
4 | #[derive(FromBits)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `FromBits` (in Nightly builds, run with -Z macro-backtrace for more info)

error: enum already has 4 variants

         = help: remove the `#[fallback]` attribute

  --> tests/ui/from-tryfrom-bits-is-invalid.rs:10:10
   |
10 | #[derive(FromBits)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `FromBits` (in Nightly builds, run with -Z macro-backtrace for more info)

error: TryFromBits only supports unit variants in enums

         = help: change this variant to a unit

  --> tests/ui/from-tryfrom-bits-is-invalid.rs:24:5
   |
24 |     S(u6),
   |     ^^^^^

error: fallback is not allowed with `TryFromBits`

         = help: use `#[derive(FromBits)]` or remove this `#[fallback]`

  --> tests/ui/from-tryfrom-bits-is-invalid.rs:28:10
   |
28 | #[derive(TryFromBits)]
   |          ^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `TryFromBits` (in Nightly builds, run with -Z macro-backtrace for more info)
